# bookstore

./: Dockerfile  README.md  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: build.yml  deploy.yml
bookStore/: settings.py  urls.py
order/: admin.py  factories.py
order/Models/: order.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/test/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/Models/: product.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
