[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["JulioVieiraP <134452045+JulioVieiraP@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
factory-boy = "^3.3.1"
django = "^5.1"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
